# miniFOC

./: .gitattributes  .gitignore  LICENSE  README.md
Hardware/: .gitignore  miniFOC.RUL
Hardware/miniFOC_driver/: foc.PcbDoc  foc.SchDoc  foc_pcblib.PcbLib  foc_schlib.SchLib  miniFOC_driver.PrjPcb  miniFOC_driver.PrjPcbStructure  立创BOM.xls
Hardware/miniFOC_driver/PnPout/: foc.html
Hardware/miniFOC_driver/__Previews/: foc.SchDocPreview
Hardware/miniFOC_encoder/: main.SchDoc  miniFOC2022.PcbLib  miniFOC2022.SchLib  miniFOC_Encoder.PcbDoc  miniFOC_Encoder.PrjPcb  miniFOC_Encoder.PrjPcbStructure
Software/foc/: .clang-format  .mxproject  CMakeLists.txt  Makefile  README  STM32F103C8Tx_FLASH.ld  STM32F103xx.svd  foc.ioc  foc_debugger.tab.json  stlink.cfg  vofa+.cmds.json
Software/foc/Components/Inc/: delay.h  vofa_usart.h
Software/foc/Components/Src/: delay.c  vofa_usart.c
Software/foc/Core/Inc/: config.h  main.h  spi.h  tim.h  utils.h
Software/foc/Core/Src/: gpio.c  main.c  spi.c  stm32f1xx_it.c  tim.c
Software/foc/Drivers/GUI/Inc/: base.h  easing.h  menu_list.h  tween.h  vkey.h
Software/foc/Drivers/GUI/Src/: base.c  easing.c  menu_list.c  tween.c  vkey.c
Software/foc/Drivers/menu/Inc/: base.h
Software/foc/Drivers/menu/Src/: base.c
Software/foc/Drivers/u8g2/Src/: u8g2_d_memory.c  u8g2_d_setup.c
Software/foc/Hardware/Inc/: bldc_config.h  bldc_test.h  c_monitor.h  current_monitor.h  encoder.h  foc.h  foc_app.h  gui.h  led.h  oled.h  pid.h
Software/foc/Hardware/Src/: bldc_config.c  bldc_test.c  c_monitor.c  current_monitor.c  encoder.c  foc.c  foc_app.c  gui.c  led.c  oled.c  pid.c
Software/foc/Startup/: startup_stm32f103xb.s
Software/foc/cmake/: toolchain-Cortex-M3.cmake
assets/: miniFOC.xmind
